Closed Bug 1027992 Opened 11 years ago Closed 11 years ago

Throw an exception when we can't get nsIGlobalObject to create Promise.

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: yrliou, Assigned: yrliou)

References

Details

(Whiteboard: webbt-api)

Attachments

(1 file, 1 obsolete file)

This bug is to solve the problem that has been pointed out by Boris in bug1006310. In BluetoothAdapter::Enable() and BluetoothAdapter::Disable(), nullptr is returned directly and doesn't match the webidl.
Hi Boris, This patch is fixing the same issue you had been pointed out in https://bugzilla.mozilla.org/show_bug.cgi?id=1006310#c8. We also returned nullptr directly in BluetoothAdapter::Enable() and BluetoothAdapter::Disable(). Could you review our webidl and implementation change for fixing this problem? Thanks, Jocelyn
Attachment #8443227 - Flags: review?(bzbarsky)
Comment on attachment 8443227 [details] [diff] [review] Bug 1027992 - Patch: Throws an exception when Promise can't be created for enable/disable adapter requests. r=me
Attachment #8443227 - Flags: review?(bzbarsky) → review+
Oh, and s/Throws/Throw/ in the commit message, please.
Keywords: checkin-needed
Attachment #8444987 - Attachment description: [Final] Bug 1027992 - Patch: Throws an exception when Promise can't be created for enable/disable adapter requests. r=bz → [Final] Bug 1027992 - Patch: Throw an exception when Promise can't be created for enable/disable adapter requests. r=bz
Summary: Throws an exception when we can't get nsIGlobalObject to create Promise. → Throw an exception when we can't get nsIGlobalObject to create Promise.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: