Bug 1027992 - Patch: Throw an exception when Promise can't be created for enable/disable adapter requests. r=bz